# d-ml

./: .cargo.toml  .gitignore  Cargo.toml
app/: Cargo.toml
dsp/: Cargo.toml
evol/: Cargo.toml
nlp/: Cargo.toml
nlp/src/: lib.rs  main.rs
nlp/src/parse/: mod.rs
nlp/src/pipelines/: essay.rs  mod.rs  uni.rs
