[package]
name = "app"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="*"
#materials={path="../materials/"}
#dsp={path="../dsp/"}
nlp={path="../nlp/"}
tinytemplate = "1.0"
tokio={version="*", features=["full"]}

[[bin]]
name="app"
path="./src/main.rs"

#isahc="*"
#slab="*l"
#abscissa_core = "0.5.2"

